--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Contact us page</title>
 </head>
 <body>
-    
+    <div class="contact-setion">
+        <h1>Contact Us</h1>
+        <div class="border"></div>
+        <form action="" class="contact-form">
+            <input type="text" class="contact-form-text" placeholder="Your Name">
+            <input type="email" class="contact-form-text" placeholder="Your Email">
+            <input type="text" class="contact-form-text" placeholder="Your PhoneNumber">
+            <textarea class="contact-form-text" placeholder="Your Message"></textarea>
+            <input type="submit" class="contact-form-btn" value="Send">
+        </form>
+    </div>
 </body>
 </html>
