added style for c-text section

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1>Contact Us</h1>
         <div class="border"></div>
         <form action="" class="contact-form">
-            <input type="text" class="contact-form-text" placeholder="Your Name">
-            <input type="email" class="contact-form-text" placeholder="Your Email">
-            <input type="text" class="contact-form-text" placeholder="Your PhoneNumber">
-            <textarea class="contact-form-text" placeholder="Your Message"></textarea>
+            <input type="text" class="c-text" placeholder="Your Name">
+            <input type="email" class="c-text" placeholder="Your Email">
+            <input type="text" class="c-text" placeholder="Your PhoneNumber">
+            <textarea class="c-text" placeholder="Your Message"></textarea>
             <input type="submit" class="contact-form-btn" value="Send">
         </form>
     </div>
