added the css style of btn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <input type="email" class="c-text" placeholder="Your Email">
             <input type="text" class="c-text" placeholder="Your PhoneNumber">
             <textarea class="c-text" placeholder="Your Message"></textarea>
-            <input type="submit" class="contact-form-btn" value="Send">
+            <input type="submit" class="c-btn" value="Send">
         </form>
     </div>
 </body>
